[build-system]
build-backend = "setuptools.build_meta"

[project]
name = "KeyForge"
description = "KeyForge is a tool which provide encryption and management of you key generators"
readme = "README.md"
authors = [
    { name = "Mohsen Ghorbani", email = "m.ghorbani2357@gmail.com" },
]
license = { text = "GPL-3.0-or-later" }
keywords = ["keyforge", "packaging", "git", "setuptools"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10+",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.10"

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mghorbani2357/KeyForge"
Source = "https://github.com/mghorbani2357/KeyForge"
Issues = "https://github.com/mghorbani2357/KeyForge/issues"

[project.scripts]
keyforge = "src.__main__:main"
kf = "src.__main__:main"

[tool.setuptools]
packages = ["KeyForge"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
write_to = "src/_version.py"
