[build-system]
requires = [
    "setuptools >= 77.0.3",
    "twine"
]
build-backend = "setuptools.build_meta"

[project]
name = "KeyForge"
description = "KeyForge is a tool which provide encryption and management of you key generators"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Mohsen Ghorbani", email = "m.ghorbani2357@gmail.com" },
]
maintainers = [
    { name = "Mohsen Ghorbani", email = "m.ghorbani2357@gmail.com" },
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["keyforge", "packaging", "git", "setuptools"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10+",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "cryptography",
]

[project.urls]
Homepage = "https://github.com/mghorbani2357/KeyForge"
Source = "https://github.com/mghorbani2357/KeyForge"
Issues = "https://github.com/mghorbani2357/KeyForge/issues"
Repository = "https://github.com/mghorbani2357/KeyForge.git"

[project.scripts]
keyforge = "KeyForge.__main__:main"
kf = "KeyForge.__main__:main"

#[tool.setuptools]
#package-dir = { "" = "src" }

#[tool.setuptools.packages.find]
#where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
write_to = "src/_version.py"
